Wrote the Test class for view details and apply job action. Wrote the Test class for sending mail. Created the service and presentation layer for managing job posting templates.